# judoscale-python

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: judoscale-ci.yml  python-package.yml  release.yml  run-tests.yml  test.yml
judoscale/asgi/: middleware.py
judoscale/celery/: __init__.py  apps.py  collector.py  tasks_monitor.py
judoscale/core/: __init__.py  adapter.py  adapter_api_client.py  config.py  logger.py  metric.py  metrics_collectors.py  metrics_store.py  platform.py  reporter.py  utilization_tracker.py
judoscale/django/: __init__.py  apps.py  middleware.py  redis.py
judoscale/dramatiq/: __init__.py  collector.py
judoscale/flask/: __init__.py  judoscale.py  middleware.py
judoscale/rq/: __init__.py  apps.py  collector.py  worker.py
sample-apps/: docker-compose.yml
sample-apps/celery_sample/: Procfile  README.md  app.py  manage.py  monitor.py  pyproject.toml  requirements.txt  settings.py
sample-apps/celery_sample/app/: app.py  settings.py  tasks.py
sample-apps/celery_sample/blog/: tasks.py  views.py
sample-apps/celery_sample/celery_sample/: __init__.py  celery.py  settings.py
sample-apps/django_2_2_21/: Procfile.heroku  Procfile.render  README.md  manage.py  pyproject.toml
sample-apps/django_2_2_21/django_2_2_21/: asgi.py  settings.py  urls.py  wsgi.py
sample-apps/django_2_2_rq_sample/: Procfile.heroku  Procfile.render  README.md  manage.py  pyproject.toml
sample-apps/django_2_2_rq_sample/django_2_2_rq_sample/: asgi.py  settings.py  urls.py  wsgi.py
sample-apps/django_2_2_rq_sample/tasks/: views.py
sample-apps/django_celery_sample/: Procfile  Procfile.heroku  Procfile.render  README.md  manage.py  pyproject.toml
sample-apps/django_celery_sample/blog/: __init__.py  tasks.py  views.py
sample-apps/django_celery_sample/django_celery_sample/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
sample-apps/django_dramatiq_sample/: Procfile  README.md  manage.py  pyproject.toml
sample-apps/django_dramatiq_sample/blog/: apps.py  tasks.py  views.py
sample-apps/django_dramatiq_sample/django_dramatiq_sample/: judoscale_setup.py  settings.py  urls.py  wsgi.py
sample-apps/django_rq_sample/: Procfile  Procfile.render  README.md  manage.py  pyproject.toml
sample-apps/django_rq_sample/blog/: views.py
sample-apps/django_rq_sample/django_rq_sample/: asgi.py  settings.py  urls.py  wsgi.py
sample-apps/django_sample/: Procfile  Procfile.heroku  Procfile.render  README.md  manage.py  pyproject.toml
sample-apps/django_sample/blog/: tests.py  views.py
sample-apps/django_sample/django_sample/: asgi.py  settings.py  urls.py  wsgi.py
sample-apps/django_sample/judoscale/: JudoscaleMiddleware.py
sample-apps/django_sample/judoscale/django/: apps.py
sample-apps/django_sample/tests/: tests.py
sample-apps/fastapi_celery_sample/: Procfile  Procfile.heroku  Procfile.render  README.md  pyproject.toml
sample-apps/fastapi_celery_sample/app/: main.py  settings.py  tasks.py
sample-apps/fastapi_dramatiq_sample/: Procfile  README.md  pyproject.toml
sample-apps/fastapi_dramatiq_sample/app/: main.py  settings.py  tasks.py
sample-apps/fastapi_sample/: Procfile  Procfile.heroku  Procfile.render  README.md  pyproject.toml  tests.py
sample-apps/fastapi_sample/app/: config.py  main.py  settings.py
sample-apps/flask_celery_sample/: Procfile  Procfile.render  README.md  pyproject.toml
sample-apps/flask_celery_sample/app/: app.py  settings.py
sample-apps/flask_rq_sample/: Procfile.heroku  Procfile.render  README.md  pyproject.toml  run-worker.py
sample-apps/flask_rq_sample/app/: app.py  settings.py  tasks.py
sample-apps/flask_sample/: .middleware.py.swp  Procfile  Procfile.heroku  Procfile.render  README.md  app.py  middleware.py  pyproject.toml  settings.py  tests.py
sample-apps/rq_sample/: Procfile  pyproject.toml  run-worker.py
sample-apps/rq_sample/app/: app.py  settings.py
src/judoscale/: logs.py
src/judoscale/core/: adapter_api_client.py  config.py  metric.py  metrics_store.py  report.py  reporter.py
src/judoscale/django/: __init__.py  apps.py  middleware.py
test/judoscale/: metrics_store_test.py  reporter_test.py
tests/: conftest.py  test_collectors.py  test_config.py  test_logs.py  test_metrics.py  test_metrics_store.py  test_reporter.py  test_utilization_tracker.py
tests/judoscale/: metrics_store_test.py  reporter_test.py
