[tool.poetry]
name = "judoscale-python"
version = "0.1.1"
description = "Official Python adapter for Judoscale — the advanced autoscaler for Heroku"
authors = [
    "Adam McCrea <adam@adamlogic.com>",
    "Mara <mara@multiplace.org>",
    "Karl Sutt <karl@sutt.ee>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/judoscale/judoscale-python"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [{include = "judoscale"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "<3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0.0" }
isort = "^5.11.2"
django = "^4.1.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
