[tool.poetry]
name = "judoscale"
version = "1.7.4"
description = "Official Python adapter for Judoscale — the advanced autoscaler for Heroku"
authors = [
    "Adam McCrea <adam@adamlogic.com>",
    "Mara <mara@multiplace.org>",
    "Karl Sutt <karl@sutt.ee>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/judoscale/judoscale-python"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [{ include = "judoscale" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "<3.0.0"
django = { version = ">=2.1.0,<6.0.0", optional = true }
flask = { version = ">=1.1.0,<4.0.0", optional = true }
celery = { version = ">=4.4.0,<6.0.0", extras = ["redis"], optional = true }
rq = { version = ">=1.0.0,<2.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0.0" }
pytest = "^8.2.2"

[tool.poetry.extras]
django = ["django"]
flask = ["flask"]
asgi = []
celery-redis = ["celery"]
rq = ["rq"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
