[tool.poetry]
name = "django-2-2-21"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.21"
gunicorn = "^20.1.0"
judoscale = { path = "../../", extras=["django"], develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
