[tool.poetry]
name = "django-2-2-rq"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.28"
gunicorn = "^20.1.0"
django-redis = "5.2.0"
django-rq = "2.7.0"
rq = "1.13.0"
redis = "5.0.0"
judoscale = { path = "../../", extras = ["django"], develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
