[tool.poetry]
name = "judoscale-django-dramatiq-sample"
version = "0.1.0"
description = "A sample app for testing judoscale with Django and Dramatiq."
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
gunicorn = "^20.1.0"
judoscale = { path = "../../", extras=["django", "dramatiq-redis"], develop = true }
dramatiq = {extras = ["redis"], version = ">=1.13.0,<3.0.0"}
django-dramatiq = ">=0.11.0,<1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
