[tool.poetry]
name = "judoscale-flask-celery-sample"
version = "0.1.0"
description = "A sample app for testing judoscale with Flask and Celery."
authors = ["Karl Sutt <karl@sutt.ee>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0"
celery = {extras = ["redis"], version = ">=4.4.0,<6.0.0"}
judoscale = { path = "../../", extras=["celery-redis", "flask"], develop = true }
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
