[tool.poetry]
name = "judoscale-flask-rq-sample"
version = "0.1.0"
description = "A sample app for testing judoscale with Flask and RQ."
authors = ["Karl Sutt <karl@sutt.ee>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
rq = "^1.13.0"
gunicorn = "^20.1.0"
judoscale = { path = "../../", extras=["rq", "flask"], develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
