[tool.poetry]
name = "judoscale-flask-sample"
version = "0.1.0"
description = "A Flask app for testing judoscale-python functionality"
authors = [
    "Adam McCrea <adam@adamlogic.com>",
    "Mara <mara@multiplace.org>",
    "Karl Sutt <karl@sutt.ee>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0"
gunicorn = "^20.1.0"
judoscale = { path = "../../", extras=["flask"], develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
