[tool.poetry]
name = "rq-sample"
version = "0.1.0"
description = ""
authors = ["Karl Sutt <karl@sutt.ee>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rq_sample"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.3"
rq = "^1.13.0"
gunicorn = "^20.1.0"
judoscale = { path = "../../", extras=["rq", "flask"], develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
